Stylize content to increase legibility, heirarchy, and fix images

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #fff;
+  color: #333;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 nav {
@@ -8,6 +10,27 @@ nav {
   float: left;
   position: fixed;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #fff;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+figcaption {
+  font-size: .8em;
 }
 
 .logo {
